--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,75 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from "../components/layout.astro";
+import {API_BASE_URL} from "../constants";
+import { Image } from "astro:assets";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const response = await fetch(API_BASE_URL,
+  {
+    method: 'POST',
+    headers: {'Content-Type':'application/json'},
+    body: JSON.stringify({
+      query: `
+				query IndexPages {
+					posts(where: {orderby: {field: DATE, order: DESC}}) {
+						nodes {
+							slug
+							date
+							title
+							excerpt
+							featuredImage {
+								node {
+									sourceUrl
+								}
+							}
+						}
+					}
+				}
+      `
+    }),
+  });
+
+// destructure data from our JSON
+const { data } = await response.json();
+
+//  assign the array of nodes to "posts" variable for usability
+const posts = data.posts.nodes
+
 ---
 
 <Layout>
-	<Welcome />
+	<div class="bg-slate-200 rounded-lg py-12">
+		<h1 class="text-center text-3xl">Our Articles</h1>
+	</div>
+	
+	<div class="flex flex-wrap pt-5 -mx-2.5">
+		{posts.map((post) => (
+			<div class="lg:w-1/3 px-2.5 mb-5">
+				<article class="rounded-lg bg-white shadow-lg p-5 h-full flex flex-col items-start justify-between">
+					<div>
+						{post.featuredImage?.node?.sourceUrl ? (
+							<img
+								class="w-full object-cover aspect-2/3 mb-5"
+								alt={`Featured image for ${post.title}`}
+								src={post.featuredImage.node.sourceUrl}
+								width={600}
+								height={400}
+							/>
+						) : (
+							<div class="w-full bg-gray-300 aspect-2/3 mb-5 flex items-center justify-center">
+								<span class="text-gray-500">No Image Available</span>
+							</div>
+						)}
+						<h2 class="text-xl font-bold mb-5">{post.title}</h2>
+						<p class="mb-6">{post.excerpt.replace(/<(.|\n)*?>/g, '')}</p>
+					</div>
+					<a
+						class="inline-block bg-slate-600 text-white rounded-md px-6 py-3 hover:bg-slate-500"
+						href={`/${post.slug}`}
+					>
+						Read More
+					</a>
+				</article>
+			</div>
+		))}
+	</div>
 </Layout>
